1. added unit test, api docs 2. fixed bug 3. added request data validation
